# baby-l4

./: .envrc  .ghci  .gitignore  .mergify.yml  README.org  Setup.hs  asp_fixed_code_2.lp  baby-l4.cabal  clingo_py_int.py  core-language.cabal  flake.nix  hie.yaml  main2out.xml  main2testout.xml  ontology_defn.csv  package.yaml  rps-test.out  rps.yaml  shell.nix  stack.yaml  test.l4
.github/workflows/: cross-off-linked-issues.yml  haskell.yml  nix-based-build.yaml  nix-based-build.yaml.disabled  stack-based-build.yaml
attic/: DisambiguateTest.hs  L4LSP.hs
attic/ToGF/: TreeTransform.hs
attic/ToGF/FromL4/: TransProp.hs
attic/ToGF/FromSCasp/: ToAnswer.hs
baby-l4-core/: LICENSE  baby-l4-core.cabal
baby-l4-core/src/L4/: Annotation.hs  Error.hs  KeyValueMap.hs  Lexer.x  Parser.y  PrintProg.hs  Syntax.hs  SyntaxManipulation.hs  TypeInference.hs  Typing.hs
exe/: Main.hs
grammars/: Answer.gf  AnswerEng.gf  Atoms.gf  AtomsEng.gf  ExtendEng.gfo  ExtendSwe.gfo  ParsePredicates.gf  ParsePredicates.labels  ParsePredicatesEng.gf  ParsePredicatesEngDisam.gf  Predicates.gf  PredicatesEng.gf  Prop.gf  PropEng.gf  PropFin.gf  PropFre.gf  PropGer.gf  PropI.gf  PropLexicon.gf  PropLexiconEng.gf  PropPor.gf  PropSwe.gf  PropTop.gf  PropTopEng.gf  Questions.gf  QuestionsEng.gf  README.md  ReducedWordNetEng.gf  corpus.gfs
hxtread/: DecTables.hs  Main.hs
hxtread/dmn-tests/: income-adequacy.dmn
l4/: LATEST.l4  Prelude.l4  Tasks.txt  child_residence.l4  coins.l4  consistent_vs_valid.l4  corp_tax.l4  corp_tax_skolem.l4  cr.l4  defeas.l4  financial_advisor.l4  financial_advisor.pl  financial_advisor_classbased.l4  financial_advisor_parametric.l4  forDocAssemble.l4  mini.l4  pdpa-sf.l4  pdpa.l4  psum.l4  pure_relations.l4  r34.l4  r34_classes.l4  rps.l4  rps_relational.l4  simpledmn.l4  smt.l4  speedlimit.l4  speedlimit_clar.l4  speedlimit_flat.l4  speedlimit_flat_consistent.l4  speedlimit_flat_provable.l4  speedlimit_predext.l4  speedlimit_sorted.l4  std-sf.l4  test.l4
l4/Automata/: aut.l4  autA.l4  autC.l4  autCTL.l4  autsimp.l4
lsp/: Main.hs
lsp-tests/: Test.hs
lsp-tests/examples/: typeErr.l4
lsp-tests/examples/ClassDeclsError/: cyclicClass.l4  dupClassNames.l4  undefSuperClass.l4
lsp-tests/examples/FieldDeclsError/: dupFieldNames.l4  undefFieldType.l4
lsp-tests/examples/RuleAssertionError/: accessToNonObjectTp.l4  illTypedSubExpr.l4  incompatiblePattern.l4  incompatibleTps.l4  nonFunctionTp.l4  nonScalarTps.l4  undeclVar.l4  unknownFieldName.l4
lsp-tests/examples/VarDeclsError/: undefVarType.l4
lsp-tests/examples/hoverError/: mini.l4
src/: .gitignore  Annotation.hs  CtlMC.hs  Error.hs  Exec.hs  InterfaceNunchaku.hs  JustificationVis.hs  KeyValueMap.hs  L4LSP.hs  L4Parser.hs  LSPServer.hs  Lexer.hs  Lexer.x  MainHelpers.hs  Model.hs  NormalizeSyntax.hs  Parser.hs  Parser.y  PrintProg.hs  Proof.hs  RuleTransfo.hs  Simple.hs  SimpleRules.hs  Smt.hs  SmtSBV.hs  Syntax.hs  SyntaxManipulation.hs  TimedMC.hs  ToASP.hs  ToASP_4.hs  ToASP_orig.hs  ToASP_orig_2.hs  ToDA.hs  ToDA2.hs  ToEpilog.hs  ToGF.hs  ToRules.hs  ToSCASP.hs  ToYaml.hs  TransProp.hs  (+3 more)
src/L4/: Annotation.hs  Error.hs  KeyValueMap.hs  Lexer.x  Parser.y  PrintProg.hs  Syntax.hs  SyntaxManipulation.hs  TypeInference.hs  Typing.hs
src/Parser/: SmartConstructors.hs
src/ToDMN/: FromL4.hs  FromSimpleToReg.hs  Picklers.hs  Types.hs
src/ToGF/: Disambiguate.hs  GenerateLexicon.hs  NormalizeSyntax.hs  ParsePred.hs  TreeTransform.hs
src/ToGF/FromL4/: ToAnswers.hs  ToProp.hs  ToQuestions.hs  TransProp.hs
src/ToGF/FromSCasp/: AnswerToGF.hs  SCasp.hs  ToAnswer.hs
src/ToGFOld/: NormalizeSyntax.hs  ParsePred.hs
src/ToRules/: FromL4.hs  ToDecls.hs  ToRules.hs  Types.hs
test/: forDocAssemble.py  rps-ez.out  rps.out
tests/: DisambiguateTest.hs  ExpSysTest.hs  Test.hs  ToGFTest.hs
tests/ExpSysTestFiles/: finAd_tests.l4  financial_advisor.l4  functions.l4
usecases/: axa.l4  axa.md  pdpa-encoding-comments.md  pdpa.l4  pdpa_act.l4  pdpa_regulations.l4  pdpa_schedule.l4
usecases/compk/motor/epilog/: README.org  alpha.epilog  compk-benchmark-epilog.json  lambda.epilog  omega.epilog
