name:                baby-l4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/smucclaw/baby-l4
license:             BSD3
license-file:        LICENSE
author:              SMU CCLAW
maintainer:          example@example.com
copyright:           2020 SMU CCLAW
category:            Web
-- build-type:          Simple
Build-Type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.org
                   , grammars/Prop.gf
                   , grammars/Answer.gf
                   , grammars/Questions.gf
                   , grammars/Predicates.gf
                   , grammars/ParsePredicates.gf
data-files:          l4/Prelude.l4
                   , grammars/Prop.gf
                   , grammars/PropI.gf
                   , grammars/PropEng.gf
                   , grammars/Atoms.gf
                   , grammars/AtomsEng.gf
                   , grammars/Answer.gf
                   , grammars/AnswerEng.gf
                   , grammars/Questions.gf
                   , grammars/QuestionsEng.gf
                   , grammars/Predicates.gf
                   , grammars/PredicatesEng.gf
                   , grammars/ReducedWordNet.gf
                   , grammars/ReducedWordNetEng.gf
                   , grammars/ParsePredicates.labels
                   , grammars/ParsePredicatesEng.labels
                   , grammars/ExtendEng.gfo
-- data-files: LICENSE
-- data-files: Prop.pgf

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.10
                     , filepath

library l4-generated
  exposed-modules:
                  -- generated from GF grammars
                  Prop
                  Answer
                  Questions
                  ParsePredicates
                  Predicates

  build-depends:       base >= 4.7 && < 5
                     , gf
                     , mtl        >= 2.2 && <2.4
  ghc-options: -Wno-all
  build-tools:         gf
  -- build-tools-depends: gf:gf
  hs-source-dirs:
    -- src
    -- Stack complains with this and doesn't work without it
    -- https://github.com/commercialhaskell/stack/issues/3929
    grammars
  default-language: Haskell2010

library
  exposed-modules:
                  Model
                  SyntaxManipulation
                  MainHelpers

                  -- lsp
                  L4LSP

                  --ToYaml
                  ToGF.FromL4.ToProp
                  ToGF.FromL4.TransProp
                  ToGF.GenerateLexicon
                  ToGF.NormalizeSyntax
                  ToGF.ParsePred
                  ToGF.Disambiguate
                  ToGF.TreeTransform
                  ToGF.FromSCasp.SCasp
                  ToGF.FromSCasp.ToAnswer
                  ToGF.FromL4.ToQuestions
                  ToGF.FromL4.ToAnswers
                  ToASP
                  ToSCASP
                  ToDA2
                  SimpleRules
                  ToRules

                  --ExampleInput
                  Exec
                  --InterfaceNunchaku
                  --RuleToTa
                  --TaToUppaal
                  Proof
                  PrintProg
                  RuleTransfo
                  Smt
                  TimedMC
                  -- SmtSBV
  other-modules: Paths_baby_l4
  hs-source-dirs:
    src

  build-depends:       base >= 4.7 && < 5
                     , baby-l4-core
                     , l4-generated
                     , array
                     , containers
                     , pretty-simple
                     , prettyprinter >= 1.7.0
                     , split
                     , text
                     , extra
                     -- required for lexer and parser
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
                     -- required for GF
                     , gf
                     , gf-ud
                     -- required for SCasp abs.syn.
                     , megaparsec
                     -- Required for lexer/lsp interop
                     , lsp-types
                     , MissingH
                     -- required for SMT interaction
                     , simple-smt
                     , sbv
                     -- required for graph processing (rule transformation)
                     , fgl >= 5.7
                     , graphviz
                     -- for package Util
                     , ghc
                     , tasty
                     , tasty-hunit
                     -- required for lsp
                     , lsp        >=1.0.0.0
                     , lsp-types  >=1.0.0.0
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
                     , lens
                     , hslogger
                     , sorted-list
                     , either
                     , transformers
                     , rope-utf16-splay
                     , mmorph
  default-language: Haskell2010
  ghc-options: -Wall

test-suite unit-tests
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Test.hs
  other-modules:       DisambiguateTest
                     , ToGFTest
                     , Paths_baby_l4
                     , ExpSysTest
  build-depends:
      base >= 4 && < 5
    , baby-l4-core
    , baby-l4
    , containers
    , extra
    , gf
    , gf-ud
    , l4-generated
    , prettyprinter
    , split
    , safe
    , mtl
    , tasty
    , tasty-expected-failure
    , tasty-golden
    , tasty-hunit
  ghc-options: -Wall

executable l4
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_baby_l4
  build-depends:       base >= 4.7 && < 5
                     , baby-l4-core
                     , baby-l4
                     , array
                     , containers
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
                     , pretty-simple
                     , optparse-applicative

executable lsp-server-bl4
  hs-source-dirs:      lsp
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , baby-l4-core
                     , baby-l4
  ghc-options: -Wall

test-suite lsp-server-tests
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    lsp-tests
  build-tool-depends:
    baby-l4:lsp-server-bl4
  main-is:
    Test.hs
  build-depends:
      base >= 4 && < 5
    , baby-l4-core
    , tasty
    , tasty-hunit
    , tasty-expected-failure
    , baby-l4
    , lsp-test
    , lsp-types
    , text
