name:                baby-l4-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/smucclaw/baby-l4
license:             BSD3
license-file:        LICENSE
author:              SMU CCLAW
maintainer:          example@example.com
copyright:           2020 SMU CCLAW
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- data-files:          l4/Prelude.l4

library
  exposed-modules:
                  -- generated
                  L4.Lexer
                  L4.Parser
                  -- from src
                  L4.Annotation
                  L4.Error
                  L4.KeyValueMap
                  L4.PrintProg
                  L4.Syntax
                  L4.SyntaxManipulation
                  L4.Typing
  other-modules: Paths_baby_l4_core
  hs-source-dirs:
    src

  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , pretty-simple
                     , prettyprinter
                     , split
                     , text
                     , extra
                     -- required for lexer and parser
                     , mtl        >= 2.2 && <2.4
                     -- utils
                     , either
  build-tools: alex, happy
  default-language: Haskell2010
  ghc-options: -Wall